k8s-manifests/ic-webapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ic-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ic-webapp
  template:
    metadata:
      labels:
        app: ic-webapp
    spec:
      containers:
      - name: ic-webapp
        image: mndiayepro97/ic-webapp:v1
        ports:
        - containerPort: 80
