k8s-manifests/odoo-postgres-clusterip-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: odoo-postgres-svc
spec:
  type: ClusterIP
  selector:
    app: odoo
    tier: backend
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
