k8s-manifests/pgadmin-nodeport-svc.yml
apiVersion: v1 
kind: Service
metadata:
  name: pgadmin-svc
spec:
  selector:
    app: pgadmin
    tier: frontend
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30081
