k8s-manifests/ingress-odoo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-ingress
spec:
  rules:
  - host: dev.odoo.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odoo-svc
            port:
              number: 8069
